--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             //     // This targets the camera to scene origin
             //     camera.setTarget(BABYLON.Vector3.Zero());
 
-            var camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(65), 200, BABYLON.Vector3.Zero(), scene);
-
+            //var camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(65), 200, BABYLON.Vector3.Zero(), scene);
+            const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0, 0, 0));
+            camera.upperBetaLimit = Math.PI / 2.2;
             // This attaches the camera to the canvas
             camera.attachControl(canvas, true);
 
@@ -517,17 +518,51 @@
 
 
 
-          //Create large ground for valley environment
+            //Create large ground for valley environment
 
            const largeGroundMat = new BABYLON.StandardMaterial("largeGroundMat");
-           largeGroundMat.diffuseTexture = new BABYLON.Texture("https://assets.babylonjs.com/environments/valleygrass.png");
+          largeGroundMat.diffuseTexture = new BABYLON.Texture("https://assets.babylonjs.com/environments/valleygrass.png");
 
             const largeGround = BABYLON.MeshBuilder.CreateGroundFromHeightMap("largeGround", "https://assets.babylonjs.com/environments/villageheightmap.png", { width: 150, height: 150, subdivisions: 20, minHeight: 0, maxHeight: 10 });
             largeGround.position.y = -0.01;
             largeGround.material = largeGroundMat;
 
 
+    const spriteManagerUFO = new BABYLON.SpriteManager("UFOManager","https://assets.babylonjs.com/environments/ufo.png", 1, {width: 128, height: 76});
+    const ufo = new BABYLON.Sprite("ufo", spriteManagerUFO);
+    ufo.playAnimation(0, 16, true, 125);
+    ufo.position.y = 5;
+    ufo.position.z = 0;
+    ufo.width = 2;
+    ufo.height = 1;
 
+
+       const spriteManagerTrees = new BABYLON.SpriteManager("treesManager", "textures/palm.png", 2000, {width: 512, height: 1024}, scene);
+
+    //We create trees at random positions
+    for (let i = 0; i < 500; i++) {
+        const tree = new BABYLON.Sprite("tree", spriteManagerTrees);
+        tree.position.x = Math.random() * (-30);
+        tree.position.z = Math.random() * 20 + 8;
+        tree.position.y = 0.5;
+    }
+
+    for (let i = 0; i < 500; i++) {
+        const tree = new BABYLON.Sprite("tree", spriteManagerTrees);
+        tree.position.x = Math.random() * (25) + 7;
+        tree.position.z = Math.random() * -35  + 8;
+        tree.position.y = 0.5;
+    }
+    
+    //Skybox
+    const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", {size:150}, scene);
+	  const skyboxMaterial = new BABYLON.StandardMaterial("skyBox", scene);
+	  skyboxMaterial.backFaceCulling = false;
+	  skyboxMaterial.reflectionTexture = new BABYLON.CubeTexture("textures/skybox", scene);
+	  skyboxMaterial.reflectionTexture.coordinatesMode = BABYLON.Texture.SKYBOX_MODE;
+	  skyboxMaterial.diffuseColor = new BABYLON.Color3(0, 0, 0);
+	  skyboxMaterial.specularColor = new BABYLON.Color3(0, 0, 0);
+	  skybox.material = skyboxMaterial;
 
 
 
