--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
             let carReady = false;
             // Dude
-            BABYLON.SceneLoader.ImportMeshAsync("him", "/scenes/Dude/", "Dude.babylon", scene).then((result) => {
+            BABYLON.SceneLoader.ImportMeshAsync("him", "/scenes/", "Dude.babylon", scene).then((result) => {
 
                 carReady = true;
                 dude = result.meshes[0];
