--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
             var scene = new BABYLON.Scene(engine);
             //const xr = scene.createDefaultXRExperienceAsync();
 
+            // var camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(65), 60, BABYLON.Vector3.Zero(), scene);
+            // camera.upperBetaLimit = Math.PI / 2.2;
+            // camera.useFramingBehavior = true;
+            // camera.attachControl(canvas, true);
+            // camera.setTarget(BABYLON.Vector3.Zero());
+
+
             //camera
             //   // This creates and positions a free camera (non-mesh)
             //     var camera = new BABYLON.FreeCamera("camera1", new BABYLON.Vector3(0, 5, -10), scene);
