--- a/index.html
+++ b/index.html
@@ -1679,9 +1679,9 @@ backgroundMaterial.shadowLevel = 0.4;
 backgroundMaterial.diffuseTexture.hasAlpha = true;
 backgroundMaterial.opacityFresnel = false;
 
-backgroundMaterial.reflectionTexture = new BABYLON.CubeTexture("textures/TropicalSunnyDay", scene);
-backgroundMaterial.reflectionTexture.coordinatesMode = BABYLON.Texture.SKYBOX_MODE;
-ground.material = backgroundMaterial;
+// backgroundMaterial.reflectionTexture = new BABYLON.CubeTexture("textures/TropicalSunnyDay", scene);
+// backgroundMaterial.reflectionTexture.coordinatesMode = BABYLON.Texture.SKYBOX_MODE;
+// ground.material = backgroundMaterial;
 
 
 // Create a sprite manager
